--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "warengo/coding-style",
 	"description": "Warengo coding style",
 	"require": {
-		"ninjify/coding-style": "^0.9.0",
+		"ninjify/coding-standard": "^0.10.0",
 		"jakub-onderka/php-console-highlighter": "^0.4.0",
 		"jakub-onderka/php-parallel-lint": "^1.0.0"
 	},
